--- a/kepler.cabal
+++ b/kepler.cabal
@@ -18,13 +18,13 @@ library
   build-depends:
     base ==4.5.*
 
-executable kepler-test
+executable kepler-demo
   main-is: Main.hs
   build-depends:
     base ==4.5.*
   other-modules: Kepler
 
-test-suite OrbitTests
+test-suite kepler-tests
   type: exitcode-stdio-1.0
   x-uses-tf: true
   ghc-options: -threaded
@@ -34,4 +34,4 @@ test-suite OrbitTests
     test-framework >= 0.4.1,
     test-framework-quickcheck2
 
-  main-is: Tests/OrbitTests.hs
+  main-is: Tests/TestMain.hs
